postgres/deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-x81
  labels:
    app: postgres-x81
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-x81
  strategy:
    type: Recreate  # Ensures we don't run multiple pods simultaneously
  template:
    metadata:
      labels:
        app: postgres-x81
    spec:
      containers:
      - name: postgres-x81
        image: postgres:16.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgresql
        resources:
          requests:
            cpu: "2"
            memory: "4Gi"
          limits:
            cpu: "10"
            memory: "14Gi"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: postgres-config
          mountPath: /etc/postgresql/postgresql.conf
          subPath: postgresql.conf
        startupProbe:
          exec:
            command:
            - pg_isready
            - -U
            - x81k25
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - x81k25
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - x81k25
          periodSeconds: 5
          failureThreshold: 1
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-x81-pvc
      - name: postgres-config
        configMap:
          name: postgres-x81-config
